updates from 33C3 event & 2017 events

--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
         "http://docs.missionpinball.org/en/latest/contribute/">Contributor's
         Guide</a>. Even if you're not a coder, we'd love help with docs, how to
         guides, and proofreading!</p>
-        <h2>Learn about MPF on the Boom Go Pinball Podcast</h2>
+        <h2>Podcast: Learn about MPF on the Boom Go Pinball Podcast</h2>
         <p>In April 2016, MPF developer Brian Madden spent 3 hours talking to
         Adam Godfrey on the <a href=
         "http://www.stitcher.com/podcast/boom-go-pinball-podcast">Boom Go
@@ -171,6 +171,12 @@
                 Part 3 (83min)</a>
             </li>
         </ul>
+        <h2>Video: Building Custom Pinball Machines</h2>
+        <p>MPF developer Jan Kantert gave this presentation at the Chaos
+            Communication Congress in December 2017. You can watch the video here, or visit
+        <a href="https://media.ccc.de/v/33c3-8012-building_custom_pinball_machines">
+            the original page</a> to download it (including audio-only versions).</p>
+        <iframe width="1024" height="576" src="https://media.ccc.de/v/33c3-8012-building_custom_pinball_machines/oembed" frameborder="0" allowfullscreen></iframe>
         <h2>MPF on social media</h2>
         <p>You can also find Mission Pinball on <a href=
         "https://twitter.com/missionpinball">Twitter</a>, <a href=
