--- a/events.html
+++ b/events.html
@@ -128,15 +128,18 @@
         <p>If you'll be at any of these events, drop us a line in the <a href=
         "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
         Group</a> and let's meet up!</p>
-        <h2>Upcoming Events. Let's grab a beer and talk pinball!</h2>
+        <h2>Future events we'll be attending</h2><b>2017</b>
         <ul>
             <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth),
             Tacoma, Washington, June 5-7, 2017</li>
-        </ul><br>
-        <h2>Past Events</h2><b>2016</b>
+        </ul>
+        <h2>Past events</h2><b>2016</b>
         <ul>
+            <li>Chaos Communication Congress, Talk: "Building Custom Pinball
+                Machines" (<a href="https://media.ccc.de/v/33c3-8012-building_custom_pinball_machines">video</a>)</li>
             <li>Chicago Pinball Expo (in the FAST Pinball booth), Chicago, Oct
             12-16, 2016</li>
+            <li>Southern Fried Gameroom Expo 2016, Atlanta</li>
             <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth),
             Tacoma, Washington, June 3-5, 2016</li>
         </ul><b>2015</b>
