--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             </li>
                             <li>Williams System 11</li>
                             <li>Data East</li>
-                            <li>Stern Whitestar / SAM</li>
+                            <li>Stern Whitestar, SAM, & SPIKE</li>
                         </ul>You can also use MPF with any existing machine if
                         you want to <a href=
                         "https://www.youtube.com/watch?v=M6EW2M_KtLg">redo the
