--- a/events.html
+++ b/events.html
@@ -15,6 +15,16 @@
     </script>
     <script src="https://use.fontawesome.com/0fb2a42c3c.js">
     </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52763280-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
     <link href="css/mpf.css" rel="stylesheet" type="text/css">
     <link href=
     "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700"
