Update hardware platforms
Add Gottlieb System/LISY 1/80, Spike to platforms and Steprocker for steppers

--- a/index.html
+++ b/index.html
@@ -217,10 +217,20 @@
                                 "http://docs.missionpinball.org/en/latest/hardware/multimorphic">
                                 Multimorphic P-ROC / P3-ROC</a>
                             </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/hardware/lisy/index.html">
+                                LISY 1 and LISY 80</a>
+                            </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/hardware/spike/index.html">
+                                Stern Spike</a>
+                            </li>                            
                         </ul>
                         <p>It also supports all sorts of other hardware, like
                         the FadeCandy LED controllers, SmartMatrix RGB DMDs,
-                        Pololu Servo Controllers, and more.</p>
+                        Pololu Servo Controllers, Trinamics stepper controller and more.</p>
                         <p>MPF is written in a hardware-independent way, so we
                         can easily add support for new hardware as it comes out.
                         You can even swap between different kinds of hardware
@@ -247,11 +257,9 @@
                         You can use MPF with modern pinball control hardware to
                         build your own custom "home brew" pinball machine from
                         scratch.</a></p>
-                        <p><a href="http://www.fastpinball.com">FAST
-                        Pinball</a> and <a href=
-                        "http://www.pinballcontrollers.com">Multimorphic</a>
-                        make modern pinball controllers you can swap into
-                        existing machines in just a few minutes to completely
+                        <p>The previously mentioned pinball hardware controllers can be
+                        swapped into existing machines (or in case of Stern SPIKE reprogrammed)
+                        in just a few minutes to completely
                         remove the original code and control them via MPF,
                         including:</p>
                         <ul>
@@ -263,6 +271,7 @@
                             <li>Williams System 11</li>
                             <li>Data East</li>
                             <li>Stern Whitestar, SAM, & SPIKE</li>
+                            <li>Gottlieb System 1 and 80</li>
                         </ul>You can also use MPF with any existing machine if
                         you want to <a href=
                         "https://www.youtube.com/watch?v=M6EW2M_KtLg">redo the
