--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="panel-heading">
                         <a href=
                         "http://docs.missionpinball.org/en/latest/config/">
-                        Build your game with config files</a>
+                        Build your game with config files or code</a>
                     </div>
                     <div class="panel-body">
                         <a href=
@@ -166,7 +166,7 @@
                     </div>
                     <div class="panel-footer">
                         <p>95%+ of what you need to do to program a pinball
-                        machine in MPF is done with text-based configuration
+                        machine in MPF can be done with text-based configuration
                         files, so even if you have no prior programming
                         experience, you can still do it!</p>
                         <p><a href=
@@ -181,7 +181,9 @@
                         API reference</a>, and it's really easy to <a href=
                         "http://docs.missionpinball.org/en/latest/start/dsl_vs_programming.html">
                         mix-and-match custom code with the MPF config
-                        files</a>.</p>
+                        files</a>. MPF provides two levels of abtraction:
+                        hardware abstraction and device abstraction which both can be used in code.
+                        Configs work on top of those abstractions and add logic blocks and config players.</p>
                     </div>
                 </div>
             </div>
