--- a/events.html
+++ b/events.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href=
-    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
+    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
     "stylesheet">
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
     </script>
     <script src=
-    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     </script>
     <script src="https://use.fontawesome.com/0fb2a42c3c.js">
     </script>
@@ -138,15 +138,26 @@
         <p>If you'll be at any of these events, drop us a line in the <a href=
         "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
         Group</a> and let's meet up!</p>
-        <h2>Future events we'll be attending</h2><b>2017</b>
+        <h2>Future events we'll be attending</h2>
+        <b>2018</b>
+        <ul>
+            <li>Texas Pinball Festival, Frisco, Texas, Mar 16-18,
+            2018</li>
+        </ul>
+        <b>2017</b>
+        <ul>
+            <li>34th Chaos Communication Congress, Leipzig, Germany, Dec 27-30,
+            2017</li>
+        </ul>
+        <h2>Past events</h2><b>2017</b>
         <ul>
             <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth),
             Tacoma, Washington, June 5-7, 2017</li>
-        </ul>
-        <h2>Past events</h2><b>2016</b>
+        </ul><b>2016</b>
         <ul>
-            <li>Chaos Communication Congress, Talk: "Building Custom Pinball
-                Machines" (<a href="https://media.ccc.de/v/33c3-8012-building_custom_pinball_machines">video</a>)</li>
+            <li>33th Chaos Communication Congress, Hamburg, Germany, Dec 27-30,
+            2016. Talk: "Building Custom Pinball Machines"
+            (<a href="https://media.ccc.de/v/33c3-8012-building_custom_pinball_machines">video</a>)</li>
             <li>Chicago Pinball Expo (in the FAST Pinball booth), Chicago, Oct
             12-16, 2016</li>
             <li>Southern Fried Gameroom Expo 2016, Atlanta</li>
@@ -154,7 +165,7 @@
             Tacoma, Washington, June 3-5, 2016</li>
         </ul><b>2015</b>
         <ul>
-            <li>30th Chaos Communication Congress, Hamburg, Germany, Dec 27-30,
+            <li>32th Chaos Communication Congress, Hamburg, Germany, Dec 27-30,
             2015</li>
             <li>Mission Pinball / FAST Pinball Seattle-area meet-up, Nov 19,
             2015</li>
