Add new sound features

--- a/index.html
+++ b/index.html
@@ -640,6 +640,12 @@
                                 "http://docs.missionpinball.org/en/latest/sound/variations.html">
                                 Sound variation</a>
                             </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/sound/tracks.html">Event-driven live looping 
+                                    audio tracks with synchonized sound layers</a>
+                            </li>
+                            <li>Playlists</li>
                             <li>Stream sound files from disk, or load into memory</li>
                         </ul>
                     </div>
