--- a/events.html
+++ b/events.html
@@ -141,16 +141,23 @@
         <h2>Future events we'll be attending</h2>
         <b>2018</b>
         <ul>
+            <li>Chicago Pinball Expo (if that takes places)</li>
+        </ul>
+        <h2>Past events</h2>
+        <b>2018</b>
+        <ul>
+            <li>Southern-Fried Gaming Expo, Atlanta, GA - Marriott Renaissance Waverly, June 8-10, 2018</li>
             <li>Texas Pinball Festival, Frisco, Texas, Mar 16-18,
             2018</li>
         </ul>
-        <h2>Past events</h2><b>2017</b>
+        <b>2017</b>
         <ul>
             <li>34th Chaos Communication Congress, Leipzig, Germany, Dec 27-30,
             2017</li>
             <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth),
             Tacoma, Washington, June 5-7, 2017</li>
-        </ul><b>2016</b>
+        </ul>
+        <b>2016</b>
         <ul>
             <li>33th Chaos Communication Congress, Hamburg, Germany, Dec 27-30,
             2016. Talk: "Building Custom Pinball Machines"
