--- a/events.html
+++ b/events.html
@@ -141,12 +141,13 @@
         <h2>Future events we'll be attending</h2>
         <b>2018</b>
         <ul>
-            <li>Chicago Pinball Expo (if that takes places)</li>
+            <li>Chicago Pinball Expo (if that takes place)</li>
         </ul>
         <h2>Past events</h2>
         <b>2018</b>
         <ul>
             <li>Southern-Fried Gaming Expo, Atlanta, GA - Marriott Renaissance Waverly, June 8-10, 2018</li>
+            <li>Northwest Pinball and Arcade Show, Tacoma Convention Center, June 8-10, 2018</li>
             <li>Texas Pinball Festival, Frisco, Texas, Mar 16-18,
             2018</li>
         </ul>
