add contribution link for docs

--- a/about.html
+++ b/about.html
@@ -147,7 +147,8 @@
         "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
         Group</a>, or read our <a href=
         "http://docs.missionpinball.org/en/latest/about/contributing_to_mpf.html">Contributor's
-        Guide</a>. Even if you're not a coder, we'd love help with docs, how to
+        Guide</a>. Even if you're not a coder, we'd love <a href=
+                "http://docs.missionpinball.org/en/latest/about/contributing_to_mpf_docs.html">help with docs</a>, how to
         guides, and proofreading!</p>
         <h2>Podcast: Learn about MPF on the Boom Go Pinball Podcast</h2>
         <p>In April 2016, MPF developer Brian Madden spent 3 hours talking to
