add media section with logo and flyer

--- a/about.html
+++ b/about.html
@@ -150,6 +150,14 @@
         Guide</a>. Even if you're not a coder, we'd love <a href=
                 "http://docs.missionpinball.org/en/latest/about/contributing_to_mpf_docs.html">help with docs</a>, how to
         guides, and proofreading!</p>
+
+        <h2>Media</h2>
+        Want to help us to promote MPF? You can use the following materials:
+        <ul>
+            <li>Flyer in <a href="flyer-A5.pdf">A5 format</a> or <a href="flyer-letter.pdf">Half letter format</a></li>
+            <li>High res <a href="images/mpf-logo-full.png">Logo</a> or <a href="images/mpf-flag-full.png">Flag</a></li>
+        </ul>
+
         <h2>Podcast: Learn about MPF on the Boom Go Pinball Podcast</h2>
         <p>In April 2016, MPF developer Brian Madden spent 3 hours talking to
         Adam Godfrey on the <a href=
