--- a/events.html
+++ b/events.html
@@ -141,7 +141,8 @@
         <h2>Future events we'll be attending</h2>
         <b>2018</b>
         <ul>
-            <li>Chicago Pinball Expo (if that takes place)</li>
+            <li>Chicago Pinball Expo, Chicago, US, Oct 17-20, 2018</li>
+            <li>Dutch Pinball Open, Drunen, The Netherlands, Nov 10-11, 2018</li>
         </ul>
         <h2>Past events</h2>
         <b>2018</b>
