--- a/about.html
+++ b/about.html
@@ -1,136 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>About Us | The Mission Pinball Framework</title>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href=
-    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
-    "stylesheet">
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
-    </script>
-    <script src=
-    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-    </script>
-    <script src="https://use.fontawesome.com/0fb2a42c3c.js">
-    </script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52763280-1', 'auto');
-  ga('send', 'pageview');
-
-    </script>
-    <link href="css/mpf.css" rel="stylesheet" type="text/css">
-    <link href=
-    "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700"
-    rel="stylesheet">
-    <link href="images/icons/apple-touch-icon-57x57.png" rel=
-    "apple-touch-icon-precomposed" sizes="57x57">
-    <link href="images/icons/apple-touch-icon-114x114.png" rel=
-    "apple-touch-icon-precomposed" sizes="114x114">
-    <link href="images/icons/apple-touch-icon-72x72.png" rel=
-    "apple-touch-icon-precomposed" sizes="72x72">
-    <link href="images/icons/apple-touch-icon-144x144.png" rel=
-    "apple-touch-icon-precomposed" sizes="144x144">
-    <link href="images/icons/apple-touch-icon-60x60.png" rel=
-    "apple-touch-icon-precomposed" sizes="60x60">
-    <link href="images/icons/apple-touch-icon-120x120.png" rel=
-    "apple-touch-icon-precomposed" sizes="120x120">
-    <link href="images/icons/apple-touch-icon-76x76.png" rel=
-    "apple-touch-icon-precomposed" sizes="76x76">
-    <link href="images/icons/apple-touch-icon-152x152.png" rel=
-    "apple-touch-icon-precomposed" sizes="152x152">
-    <link href="images/icons/favicon-196x196.png" rel="icon" sizes="196x196"
-    type="image/png">
-    <link href="images/icons/favicon-96x96.png" rel="icon" sizes="96x96" type=
-    "image/png">
-    <link href="images/icons/favicon-32x32.png" rel="icon" sizes="32x32" type=
-    "image/png">
-    <link href="images/icons/favicon-16x16.png" rel="icon" sizes="16x16" type=
-    "image/png">
-    <link href="images/icons/favicon-128.png" rel="icon" sizes="128x128" type=
-    "image/png">
-    <meta content="The Mission Pinball Framework" name="application-name">
-    <meta content="#FFFFFF" name="msapplication-TileColor">
-    <meta content="images/icons/mstile-144x144.png" name=
-    "msapplication-TileImage">
-    <meta content="images/icons/mstile-70x70.png" name=
-    "msapplication-square70x70logo">
-    <meta content="images/icons/mstile-150x150.png" name=
-    "msapplication-square150x150logo">
-    <meta content="images/icons/mstile-310x150.png" name=
-    "msapplication-wide310x150logo">
-    <meta content="images/icons/mstile-310x310.png" name=
-    "msapplication-square310x310logo">
-</head>
-<body>
-    <div class="jumbotron">
-        <div class="container text-center">
-            <h1>The Mission Pinball Framework</h1>
-            <p>Software for powering real pinball machines. 100% free. 100%
-            open source.</p>
-        </div>
-    </div>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button class="navbar-toggle" data-target="#myNavbar"
-                data-toggle="collapse" type="button"><span class=
-                "icon-bar"></span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span></button> <a class="navbar-brand" href=
-                "/"><img src="images/mpf-flag-tiny.png"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="http://docs.missionpinball.org">Docs</a>
-                    </li>
-                    <li>
-                        <a href=
-                        "http://docs.missionpinball.org/en/latest/tutorial/">
-                        Tutorial</a>
-                    </li>
-                    <li>
-                        <a href=
-                        "https://groups.google.com/forum/#!forum/mpf-users">Forum</a>
-                    </li>
-                    <li>
-                        <a href="/events.html">Live Events</a>
-                    </li>
-                    <li>
-                        <a href="/about.html">About</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href=
-                        "https://twitter.com/missionpinball"><span class=
-                        "fa fa-twitter fa-lg"></span></a>
-                    </li>
-                    <li>
-                        <a href=
-                        "https://www.youtube.com/missionpinball"><span aria-hidden="true"
-                        class="fa fa-youtube fa-lg"></span></a>
-                    </li>
-                    <li>
-                        <a href=
-                        "https://github.com/missionpinball/"><span class=
-                        "fa fa-github fa-lg"></span></a>
-                    </li>
-                    <li>
-                        <a href=
-                        "https://www.flickr.com/groups/missionpinball"><span class=
-                        "fa fa-flickr fa-lg"></span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav><!-- Begin Page Content-->
+---
+layout: default
+title: About
+---
     <div class="container">
         <p>The Mission Pinball Framework is being built by pinball-loving
         volunteers who are building, maintaining, and supporting MPF in their
@@ -202,18 +73,4 @@
         "https://www.flickr.com/groups/missionpinball">Flickr</a>, <a href=
         "https://www.youtube.com/user/missionpinball">YouTube</a>, and <a href=
         "https://github.com/missionpinball/">GitHub</a>.</p>
-    </div><!-- End Page Content-->
-    <br>
-    <br>
-    <footer class="container-fluid text-center">
-        <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>.
-        Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY
-        4.0.</a> Website <a href=
-        "https://github.com/missionpinball/missionpinball-website">source</a>.<br>
-
-        <a href=
-        "https://groups.google.com/forum/#!topic/mpf-users/7I-phnq9rOs">Archive
-        of posts from the old website</a>.</p>
-    </footer>
-</body>
-</html>
+    </div>
