--- a/blog.html
+++ b/blog.html
@@ -5,12 +5,8 @@ title: Blog
 <div class="container">
 <h1>Latest Posts</h1>
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <p>{{ post.excerpt }}</p>
-    </li>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+    <a href="{{ post.url }}">{{ post.title }}</a> {{ post.excerpt }}
+{% endfor %}
+
 </div>
