--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@ title: Projects
 {% assign projects_by_start = site.projects | sort: 'started' | reverse %}
 {% for project in projects_by_start %}
         <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.name }}
-        {% if project.initials %}
-            ({{ project.initials }})
+        {% if project.acronym %}
+            ({{ project.acronym }})
         {% endif %}
         </a> by {{ project.team }} (started: {{ project.started | date_to_string }})</li>
 {% endfor %}
