--- a/projects.html
+++ b/projects.html
@@ -18,3 +18,4 @@ title: Projects
         </a> by {{ project.team }} (started: {{ project.started | date_to_string }})</li>
 {% endfor %}
         </ul>
+</div>
