--- a/projects.html
+++ b/projects.html
@@ -3,19 +3,33 @@ layout: default
 title: Projects
 ---
 <div class="container">
-        <p>A curated list of pinball machines running MPF. Most of those are in progress.</p>
-        <p>If you are building a machine with MPF let us know in the <a href=
-        "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
-        Group</a> and we will list it here.</p>
-        <h2>Active projects</h2>
-        <ul>
+    <p>A curated list of pinball machines running MPF. Most of those are in progress.</p>
+    <p>If you are building a machine with MPF let us know in the <a href=
+    "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
+    Group</a> and we will list it here.</p>
+    <h2>Active projects</h2>
+    <ul>
 {% assign projects_by_start = site.projects | sort: 'started' | reverse %}
 {% for project in projects_by_start %}
+    {% unless project.finished %}
         <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.name }}
         {% if project.acronym %}
             ({{ project.acronym }})
         {% endif %}
         </a> by {{ project.team }} (started: {{ project.started | date_to_string }})</li>
+    {% endunless %}
+{% endfor %}
+    </ul>
+    <h2>Finished projects</h2>
+    <ul>
+{% for project in projects_by_start %}
+    {% if project.finished %}
+        <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.name }}
+        {% if project.acronym %}
+            ({{ project.acronym }})
+        {% endif %}
+        </a> by {{ project.team }} (started: {{ project.started | date_to_string }} finished: {{ project.finished | date_to_string }})</li>
+    {% endif %}
 {% endfor %}
         </ul>
 </div>
