list custom hardware platforms and machine as targets

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Home
                 run real pinball machines. It allows both casual builders and
                 hard-core programmers to create the software to run their pinball
                 machines—whether it’s new game code for an existing pinball
-                machine, a “re-theme” of an old machine, or totally custom /
-                homebrew machine built from scratch.</p>
+                machine, a “re-theme” of an old machine, or totally custom pinball
+                or any homebrew pinball machine built from scratch.</p>
                 <p>MPF is cross-platform and runs on Windows, Mac, Linux, and
                 the Raspberry Pi. It's available in 32-bit and 64-bit versions
                 and can be installed in minutes.</p><br>
@@ -99,7 +99,10 @@ title: Home
                                 <a href=
                                 "http://docs.missionpinball.org/en/latest/hardware/spike/index.html">
                                 Stern Spike</a>
-                            </li>                            
+                            </li>
+                            <li>
+                                Your custom pinball platform. Use our interface to implement your protocol.
+                            </li>
                         </ul>
                         <p>It also supports all sorts of other hardware, like
                         the FadeCandy LED controllers, SmartMatrix RGB DMDs,
@@ -145,6 +148,7 @@ title: Home
                             <li>Data East</li>
                             <li>Stern Whitestar, SAM, & SPIKE</li>
                             <li>Gottlieb System 1 and 80</li>
+                            <li>Your custom pinball machine</li>
                         </ul>You can also use MPF with any existing machine if
                         you want to <a href=
                         "https://www.youtube.com/watch?v=M6EW2M_KtLg">redo the
@@ -513,7 +517,7 @@ title: Home
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/sound/tracks.html">Event-driven live looping 
+                                "http://docs.missionpinball.org/en/latest/sound/tracks.html">Event-driven live looping
                                     audio tracks with synchonized sound layers</a>
                             </li>
                             <li>Playlists</li>
