--- a/index.html
+++ b/index.html
@@ -661,7 +661,85 @@ title: Home
             </div>
         </div>
     </div>
-    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="/blog.html">Recent updates</a>
+                    </div>
+                    <div class="panel-footer">
+                        <p>
+                            {% for post in site.posts limit: 3 %}
+                                <a href="{{ post.url }}">{{ post.title }}</a> {{ post.excerpt }}
+                            {% endfor %}
+                        </p>
+                        See <a href="/blog.html">more blog posts</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="/projects.html">Recently Started Projects</a>
+                    </div>
+                    <div class="panel-footer">
+                        <ul>
+                        {% assign projects_by_start = site.projects | sort: 'started' | reverse %}
+                        {% for project in projects_by_start limit: 8 %}
+                            {% unless project.finished %}
+                                <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.name }}
+                                {% if project.acronym %}
+                                    ({{ project.acronym }})
+                                {% endif %}
+                                </a> by {{ project.team }} (started: {{ project.started | date_to_string }})</li>
+                            {% endunless %}
+                        {% endfor %}
+                        </ul>
+                        See <a href="/projects.html">more projects</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="/projects.html">Finished Projects</a>
+                    </div>
+                    <div class="panel-footer">
+                        <ul>
+                        {% assign projects_by_finish = site.projects | sort: 'finished' | reverse %}
+                        {% for project in projects_by_finish %}
+                            {% if project.finished %}
+                                <li><a href="{{ project.url | prepend: site.baseurl }}">{{ project.name }}
+                                {% if project.acronym %}
+                                    ({{ project.acronym }})
+                                {% endif %}
+                                </a> by {{ project.team }} (started: {{ project.started | date_to_string }} finished: {{ project.finished | date_to_string }})</li>
+                            {% endif %}
+                        {% endfor %}
+                        </ul>
+                        See <a href="/projects.html">more projects</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="/events.html">Events</a>
+                    </div>
+                    <div class="panel-footer">
+                        <ul>
+                        {% assign sorted_event = site.events | sort: 'date' | reverse %}
+                        {% for event in sorted_event limit: 5 %}
+                            <li><a href="{{ event.url | prepend: site.baseurl }}">{{ event.name }}</a>, {{ event.location }}, {{ event.city }}, {{ event.duration }}, {{ event.year }}</li>
+                        {% endfor %}
+                        </ul>
+                        See <a href="/events.html">more events</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-2"></div>
