update hardware controllers on website

--- a/index.html
+++ b/index.html
@@ -77,36 +77,56 @@ title: Home
                         <ul>
                             <li>
                                 <a href=
-                                "https://docs.missionpinball.org/en/latest/hardware/fast">
-                                FAST Pinball</a>
-                            </li>
-                            <li>
-                                <a href=
                                 "https://docs.missionpinball.org/en/latest/hardware/opp">
-                                Open Pinball Project</a>
+                                Open Pinball Project</a> /
+                                <a href=
+                                "https://docs.missionpinball.org/en/latest/hardware/opp/cobrapin/index.html">
+                                Cobrapin</a>
+                                which can control custom machines
                             </li>
                             <li>
                                 <a href=
-                                "https://docs.missionpinball.org/en/latest/hardware/multimorphic">
-                                Multimorphic P-ROC / P3-ROC</a>
+                                "https://docs.missionpinball.org/en/latest/hardware/apc/index.html">
+                                Arduino Pinball Controller (APC)</a>
+                                which can be used to drive System6 to System11c machines
                             </li>
                             <li>
                                 <a href=
                                 "https://docs.missionpinball.org/en/latest/hardware/lisy/index.html">
                                 LISY 1 and LISY 80</a>
+                                to control Gottlieb System 1 or System 80 machines
+                            </li>
+                            <li>
+                                <a href=
+                                "https://docs.missionpinball.org/en/latest/hardware/multimorphic">
+                                Multimorphic P-ROC / P3-ROC</a>
+                                to control WPC or custom machines
+                            </li>
+                            <li>
+                                <a href=
+                                "https://docs.missionpinball.org/en/latest/hardware/fast">
+                                FAST Pinball</a>
+                                to control custom machines
                             </li>
                             <li>
                                 <a href=
                                 "https://docs.missionpinball.org/en/latest/hardware/spike/index.html">
-                                Stern Spike</a>
+                                Stern Spike 1 or Spike 2</a>
+                                to control those machine directly
                             </li>
                             <li>
                                 Your custom pinball platform. Use our interface to implement your protocol.
                             </li>
                         </ul>
-                        <p>It also supports all sorts of other hardware, like
-                        the FadeCandy LED controllers, SmartMatrix RGB DMDs,
-                        Pololu Servo Controllers, Trinamics stepper controller and more.</p>
+                        <p>It also supports all sorts of
+                            <a href="https://docs.missionpinball.org/en/latest/hardware/index.html">other hardware</a>,
+                            like the
+                            <a href="https://docs.missionpinball.org/en/latest/hardware/fadecandy/index.html">FadeCandy LED controllers</a>,
+                            SmartMatrix RGB DMDs,
+                            <a href="https://docs.missionpinball.org/en/latest/hardware/pololu_maestro/index.html">Pololu Servo Controllers</a>,
+                            <a href="https://docs.missionpinball.org/en/latest/hardware/pololu_tic/index.html">Pololu stepper controller</a>
+                            and more.
+                        </p>
                         <p>MPF is written in a hardware-independent way, so we
                         can easily add support for new hardware as it comes out.
                         You can even swap between different kinds of hardware
