updated home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ title: Home
                 machine, a “re-theme” of an old machine, or totally custom pinball
                 or any homebrew pinball machine built from scratch.</p>
                 <p>MPF is cross-platform and runs on Windows, Mac, Linux, and
-                the Raspberry Pi. It's available in 32-bit and 64-bit versions
-                and can be installed in minutes.</p><br>
+                the Raspberry Pi.</p><br>
             </div>
             <div class="col-sm-2"></div>
         </div>
@@ -27,7 +26,7 @@ title: Home
                     <div class="panel-heading">
                         <a href=
                         "https://docs.missionpinball.org/en/latest/config/">
-                        Build your game with config files or code</a>
+                        Build your game with config files and/or code</a>
                     </div>
                     <div class="panel-body">
                         <a href=
@@ -106,7 +105,7 @@ title: Home
                                 <a href=
                                 "https://docs.missionpinball.org/en/latest/hardware/fast">
                                 FAST Pinball</a>
-                                to control custom machines
+                                modern and retro controllers.
                             </li>
                             <li>
                                 <a href=
