update docs links

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@ title: About
         <p>Want to help out? We'd love it! Reach out to us in the <a href=
         "https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google
         Group</a>, or read our <a href=
-        "http://docs.missionpinball.org/en/latest/about/contributing_to_mpf.html">Contributor's
+        "https://docs.missionpinball.org/about/contributing_to_mpf.html">Contributor's
         Guide</a>. Even if you're not a coder, we'd love <a href=
-                "http://docs.missionpinball.org/en/latest/about/contributing_to_mpf_docs.html">help with docs</a>, how to
+                "https://docs.missionpinball.org/about/contributing_to_mpf_docs.html">help with docs</a>, how to
         guides, and proofreading!</p>
 
         <h2>Media</h2>
